# RTNeural-SIMDRuntimePlugin

./: CMakeLists.txt  README.md
.github/: FUNDING.yml
installers/mac/: Intro.txt  NeuralSIMDRuntimePlugin.pkgproj  build_mac_installer.sh
installers/windows/: NeuralSIMDRuntimePlugin_Install_Script.iss  build_win_installer.sh
modules/: CMakeLists.txt
res/: CMakeLists.txt
scripts/: mac_builds.sh  validate.sh  win_builds.sh
src/: CMakeLists.txt  NeuralSIMDRuntimePlugin.cpp  NeuralSIMDRuntimePlugin.h  SIMD_RNN.cpp  SIMD_RNN.h  pch.h
